--- a/src/main/webapp/WEB-INF/views/css/styles.css
+++ b/src/main/webapp/WEB-INF/views/css/styles.css
@@ -8,8 +8,6 @@ h3 {
 }
 
 body {
-	max-width: 860px;
-	min-width: 360px;
 	margin: 0px auto;
 	background: #F8F8F8;
 	padding: 0px 5px;
@@ -52,7 +50,7 @@ body {
 	background-color: #fff;
 	text-align: center;
 	margin-top: 10px;
-	padding: 5px 0px 0px 0px;
+	padding: 40px 0;
 	border-top: 1px solid #ccc;
 }
 
@@ -62,7 +60,7 @@ body {
  color: #4b4c4d;
 }
 
-.footer-container .social {
+.footer-container .social a {
 	font-size: 24px;
 	color: inherit;
 	border: 1px solid #ccc;
@@ -111,22 +109,102 @@ body {
 	color: #aaa;
 }
 
-.menu-container {
-	text-align: right;
-	margin: 10px 5px;
+nav {
+	background : #074cba;
+	border-bottom : 1px solid #ccc;
+	border-top: 1px solid #ccc;
+	height: 80px;
+	width: 100%;
 }
 
-.menu-container a {
-	margin: 5px 5px 5px 10px;
-	color: #004d99;
-	font-weight: bold;
-	text-decoration: none;
+nav ul{
+	float: right;
+	margin-right: 20px;
 }
+
+nav ul li{
+	display: inline-block;
+	line-height: 80px;
+	margin: 0 5px;
+}
+
+nav ul li a{
+	color: white;
+	font-size: 17px;
+	text-transform: uppercase;
+	border-radius: 3px;
+	padding: 7px 13px;
+}
+
+a.home, a:hover{
+	background: #014c8a;
+	transition: .5s;
+}
+
+.checkbtn{
+	font-size: 30px;
+	color: white;
+	float: right;
+	line-height: 80px;
+	margin-right: 40px;
+	cursor: pointer;
+}
+
+#check{
+	display: none;
+}
+
+@media (max-width: 952px){
+	nav ul li a{
+		font-size: 16px;
+	}
+}
+
+@media (max-width: 858px){
+	.checkbtn{
+		display: block;
+	}
+	
+	ul{
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		background: #2c3e50;
+		top: 80px;
+		left: 0;
+		text-align: center;
+		transition: all .5s;
+	}
+	
+	nav ul li{
+		display: block;
+		margin: 50px 0;
+		line-height: 30px;
+	}
+	
+	nav ul li a {
+		font-size: 20px;
+	}
+	
+	a:hover, a.active{
+		background: none;
+		color: #0082e6;
+	}
+	
+	#check:checked ~ ul{
+		left: 0;
+	}
+	
+}
+
 
 .site-name {
 	font-size: 200%;
 	margin: 10px 10px 10px 0px;
 	padding: 5px;
+	color: white;
+	line-height: 80px;
+	font-weight: bold;
 }
 
 .container {
